build installer for linux