@@ -282,6 +282,39 @@
                             </argLine>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-antrun-plugin</artifactId>
+                        <version>1.7</version>
+                        <executions>
+                            <execution>
+                                <id>jpackage</id>
+                                <phase>install</phase>
+                                <configuration>
+                                    <target>
+                                        <exec executable="jpackage" failonerror="true">
+                                            <arg line="--type rpm"/>
+                                            <arg line="--dest ./target/installer"/>
+                                            <arg line="--input ./target/release-directory"/>
+                                            <arg line="--main-jar &quot;${project.build.finalName}.jar&quot;"/>
+                                            <arg line="--module-path ./target/release-directory/lib"/>
+                                            <arg line="--add-modules javafx.controls,javafx.fxml"/>
+                                            <arg line="--java-options &quot;--enable-preview&quot;"/>
+                                            <arg line="--icon ./assets/app.ico"/>
+                                            <arg line="--name &quot;${project.build.finalName}&quot;"/>
+                                            <arg line="--app-version &quot;${project.version}.${env.CIRCLE_BUILD_NUM}&quot;"/>
+                                            <arg line="--copyright &quot;2020 Luke Thompson&quot;"/>
+                                            <arg line="--vendor &quot;Luke Thompson&quot;"/>
+                                            <arg line="--verbose"/>
+                                        </exec>
+                                    </target>
+                                </configuration>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
